# Distribuidos

./: .gitignore  Commands
build-http_server-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  http_server  http_server.cbp
http_server/: CMakeLists.txt  CMakeLists.txt.user.666d587  httpserver.cpp  httpserver.cpp.QWYwCF  httpserver.h  main.cpp  main.cpp.jfwfHf  tools.cpp  tools.h  utils.cpp  utils.h
http_server/ejecutador/: ServicioEjecucion.cpp  ServicioEjecucion.h
http_server/html_dir/: error.html  index.html
sockets/: Cliente.cpp  Cliente.h  File.cpp  File.h  List.h  MsgClient.cpp  MsgClient.h  MsgService.cpp  MsgService.h  Servicio.cpp  Servicio.h  Singleton.h  String.cpp  String.h  client.cpp  service.cpp  socket.h
